<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="leak_canary_display_activity_label" translatable="false">TrumanMs Leaks</string>
    <string name="next">Next</string>
    <string name="getStart">Get Started</string>
    <string name="money_title">Earn Great Money locally</string>
    <string name="slide_1_des">Sign up to accept earning opportunities in your neighbourhood</string>
    <string name="slide_2_title">Boost Your CV</string>
    <string name="slide_2_des">Stay ahead of others, Improve your CV with Certificates and Work Experience</string>
    <string name="slide_3_title">Enjoy Medical Benefits</string>
    <string name="slide_3_des">By being part of  the Truman Community, you may earn free life insurance</string>
    <string name="version_discontinued">This Version Has Been Discontinued</string>
    <string name="please_update_your_app_from_play_store">Please Update Your App From Play Store</string>
    <string name="open_play_store">Open Play Store</string>
    <string name="curren_version">Current Version : %s</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Vishwakarma Electrical</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_my_complaint">MyComplaintActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="turn_on_gps_message">Important!!, Gps Not Turned On You will be redirected to settings page , Please
        turn on GPS and set mode to High Accuracy
    </string>
</resources>
