<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.vinners.trumanms.ui.appVersionDiscontinued.AppVersionDiscontinuedFragment">


        <ImageView
            android:id="@+id/app_icon_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/version_discontinued"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/please_update_your_app_from_play_store"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/current_version_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/update_app_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/open_play_store" />


    </LinearLayout>

</layout>