<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.vinners.trumanms.ui.appVersionDiscontinued.VersionBlockActivity">
        <ImageView
            android:id="@+id/app_icon_image_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/cube_logo_ve"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon_image_view"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/version_discontinued"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/please_update_your_app_from_play_store"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/current_version_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_version"
        android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/update_app_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_version_text_view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_20dp"
            android:backgroundTint="@color/button_back"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/open_play_store"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>
