<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="">

        <TextView
            android:id="@+id/skpBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="@color/intro_skip"
            android:textSize="16sp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/appIntroViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/skpBtn"
            android:layout_weight="3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <LinearLayout
                android:id="@+id/dotsLayout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/intro_skip"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignRight="@id/dotsLayout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/button_back"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</layout>